--- a/mailu.env
+++ b/mailu.env
@@ -9,10 +9,10 @@
 ###################################
 
 # Set to a randomly generated 16 bytes string
-SECRET_KEY=
+SECRET_KEY=MSEH43NS9EM0PDX0
 
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
-SUBNET=
+SUBNET=192.168.203.0/24
 
 # Main mail domain
 DOMAIN=interlink-project.eu
@@ -65,7 +65,7 @@ MESSAGE_RATELIMIT=200/day
 
 # Networks granted relay permissions
 # Use this with care, all hosts in this networks will be able to send mail without authentication!
-RELAYNETS=
+RELAYNETS=13.95.213.150,20.126.47.15,20.101.54.153,130.206.138.235,40.68.209.233,51.137.213.143,52.233.154.247
 
 # Will relay all outgoing mails if configured
 RELAYHOST=
@@ -136,7 +136,7 @@ CREDENTIAL_ROUNDS=12
 REAL_IP_HEADER=
 
 # IPs for nginx set_real_ip_from (CIDR list separated by commas)
-REAL_IP_FROM=
+REAL_IP_FROM=172.22.0.0/32
 
 # choose wether mailu bounces (no) or rejects (yes) mail when recipient is unknown (value: yes, no)
 REJECT_UNLISTED_RECIPIENT=
