updated ip from to include traefik ips

--- a/mailu.env
+++ b/mailu.env
@@ -136,7 +136,7 @@ CREDENTIAL_ROUNDS=12
 REAL_IP_HEADER=
 
 # IPs for nginx set_real_ip_from (CIDR list separated by commas)
-REAL_IP_FROM=172.22.0.0/32
+REAL_IP_FROM=
 
 # choose wether mailu bounces (no) or rejects (yes) mail when recipient is unknown (value: yes, no)
 REJECT_UNLISTED_RECIPIENT=
