--- a/mailu.env
+++ b/mailu.env
@@ -133,10 +133,10 @@ COMPOSE_PROJECT_NAME=mailu
 CREDENTIAL_ROUNDS=12
 
 # Header to take the real ip from
-REAL_IP_HEADER=
+REAL_IP_HEADER=X-Real-IP
 
 # IPs for nginx set_real_ip_from (CIDR list separated by commas)
-REAL_IP_FROM=
+REAL_IP_FROM=172.22.0.2
 
 # choose wether mailu bounces (no) or rejects (yes) mail when recipient is unknown (value: yes, no)
 REJECT_UNLISTED_RECIPIENT=
