--- a/mail-docker-compose.yml
+++ b/mail-docker-compose.yml
@@ -74,11 +74,11 @@ services:
 #      - "traefik.tcp.routers.mailu_smtp_ssl.tls.passthrough=true"
 #      - "traefik.tcp.routers.mailu_smtp_ssl.service=mailu_smtp_ssl"
 #      - "traefik.tcp.services.mailu_smtp_ssl.loadbalancer.server.port=465"
-      #SUBMISSION
-      - "traefik.tcp.routers.mailu_smtp.rule=HostSNI(`*`)"
-      - "traefik.tcp.routers.mailu_smtp.entrypoints=submission"
-      - "traefik.tcp.routers.mailu_smtp.service=mailu_smtp"
-      - "traefik.tcp.services.mailu_smtp.loadbalancer.server.port=587"
+#      #SUBMISSION
+#      - "traefik.tcp.routers.mailu_smtp.rule=HostSNI(`*`)"
+#      - "traefik.tcp.routers.mailu_smtp.entrypoints=submission"
+#      - "traefik.tcp.routers.mailu_smtp.service=mailu_smtp"
+#      - "traefik.tcp.services.mailu_smtp.loadbalancer.server.port=587"
 #      #IMAP
 #      - "traefik.tcp.routers.mailu_imap.rule=HostSNI(`*`)"
 #      - "traefik.tcp.routers.mailu_imap.entrypoints=imap"
